WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103659
[BlackBerry] Do not adjust scroll position on viewport resizes that are not orientation change related
https://bugs.webkit.org/show_bug.cgi?id=103659
Summary
[BlackBerry] Do not adjust scroll position on viewport resizes that are not o...
Andrew Lo
Reported
2012-11-29 12:23:24 PST
For viewport resizes that are not due to orientation changes, do not adjust scroll position.
Attachments
Patch
(2.07 KB, patch)
2012-11-29 12:27 PST
,
Andrew Lo
no flags
Details
Formatted Diff
Diff
Patch
(2.07 KB, patch)
2012-11-29 12:35 PST
,
Andrew Lo
no flags
Details
Formatted Diff
Diff
Patch
(2.05 KB, patch)
2012-11-29 12:46 PST
,
Andrew Lo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andrew Lo
Comment 1
2012-11-29 12:27:47 PST
Created
attachment 176786
[details]
Patch
Rob Buis
Comment 2
2012-11-29 12:29:39 PST
Comment on
attachment 176786
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-11-29 12:30:30 PST
Attachment 176786
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/Api/WebPage.cpp',..." exit_code: 1 Source/WebKit/blackberry/Api/WebPage.cpp:3641: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andrew Lo
Comment 4
2012-11-29 12:35:32 PST
Created
attachment 176790
[details]
Patch
Rob Buis
Comment 5
2012-11-29 12:39:03 PST
Comment on
attachment 176790
[details]
Patch Retry.
WebKit Review Bot
Comment 6
2012-11-29 12:40:06 PST
Attachment 176790
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/Api/WebPage.cpp',..." exit_code: 1 Source/WebKit/blackberry/Api/WebPage.cpp:3641: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andrew Lo
Comment 7
2012-11-29 12:46:18 PST
Created
attachment 176794
[details]
Patch
Rob Buis
Comment 8
2012-11-29 12:47:29 PST
Comment on
attachment 176794
[details]
Patch These rules are silly IMHO.
WebKit Review Bot
Comment 9
2012-11-29 13:26:15 PST
Comment on
attachment 176794
[details]
Patch Clearing flags on attachment: 176794 Committed
r136157
: <
http://trac.webkit.org/changeset/136157
>
WebKit Review Bot
Comment 10
2012-11-29 13:26:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug